--- a/01/package.json
+++ b/01/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/abjtkr/namaste-react/issues"
   },
-  "homepage": "https://github.com/abjtkr/namaste-react#readme"
+  "homepage": "https://github.com/abjtkr/namaste-react#readme",
+  "devDependencies": {
+    "parcel": "^2.12.0"
+  }
 }
